--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,13 @@ migrate_working_dir/
 # VS Code which you may wish to be included in version control, so this line
 # is commented out by default.
 #.vscode/
+__pycache__/
+env/
+*.pyc
+*.pyo
+*.pyd
+*.db
+.DS_Store
 
 # Flutter/Dart/Pub related
 **/doc/api/
